--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@stream-io/feeds-client": "https://github.com/GetStream/stream-feeds-js.git#workspace=@stream-io/feeds-client",
     "@stream-io/node-sdk": "https://github.com/GetStream/stream-node.git#main",
     "@stream-io/node-sdk-feed": "https://github.com/GetStream/stream-node.git#feeds-api",
+    "@tanstack/react-query": "^5.82.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
