--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stream-io/node-sdk": "https://github.com/GetStream/stream-node.git#main",
     "@stream-io/node-sdk-feed": "https://github.com/GetStream/stream-node.git#feeds-api",
     "@tanstack/react-query": "^5.82.0",
+    "emoji-picker-react": "^4.12.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
