--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feeds-app",
-  "version": "0.1.0",
+  "name": "feeds-v3-app",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stream-io/feeds-client": "^0.1.0",
-    "@stream-io/node-sdk": "https://github.com/GetStream/stream-node.git#main",
-    "@stream-io/node-sdk-feed": "https://github.com/GetStream/stream-node.git#feeds-api",
+    "@stream-io/feeds-client": "0.1.4",
+    "@stream-io/node-sdk": "0.5.0",
     "@tanstack/react-query": "^5.82.0",
     "emoji-picker-react": "^4.12.3",
     "lucide-react": "^0.525.0",
