--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,12 @@ jobs:
         with:
           node-version: "22"
 
+      - name: Enable Corepack and activate Yarn 4
+        run: |
+          corepack enable
+          corepack prepare yarn@4.6.0 --activate
+          yarn --version
+
       - name: Install Vercel CLI
         run: npm i -g vercel
 
