--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,14 +42,16 @@ jobs:
       - name: Pull Vercel env (production)
         run: vercel pull --yes --environment=production --token="$VERCEL_TOKEN"
 
+      - name: Create .env file
+        run: |
+          echo "NEXT_PUBLIC_STREAM_API_KEY=${{ secrets.NEXT_PUBLIC_STREAM_API_KEY }}" >> .env
+          echo "STREAM_API_SECRET=${{ secrets.STREAM_API_SECRET }}" >> .env
+          echo "NEXT_PUBLIC_FEEDS_BASE_URL=${{ secrets.NEXT_PUBLIC_FEEDS_BASE_URL }}" >> .env
+          echo "NEXT_PUBLIC_STREAM_TOUR_API_KEY=${{ secrets.NEXT_PUBLIC_STREAM_TOUR_API_KEY }}" >> .env
+          echo "STREAM_TOUR_API_SECRET=${{ secrets.STREAM_TOUR_API_SECRET }}" >> .env
+
       - name: Build project artifacts
         run: vercel build --prod --token="$VERCEL_TOKEN"
-        env:
-          NEXT_PUBLIC_STREAM_API_KEY: ${{ secrets.NEXT_PUBLIC_STREAM_API_KEY }}
-          STREAM_API_SECRET: ${{ secrets.STREAM_API_SECRET }}
-          NEXT_PUBLIC_FEEDS_BASE_URL: ${{ secrets.NEXT_PUBLIC_FEEDS_BASE_URL }}
-          NEXT_PUBLIC_STREAM_TOUR_API_KEY: ${{ secrets.NEXT_PUBLIC_STREAM_TOUR_API_KEY }}
-          STREAM_TOUR_API_SECRET: ${{ secrets.STREAM_TOUR_API_SECRET }}
 
       - name: Deploy to Vercel (prebuilt, production)
         run: vercel deploy --prebuilt --prod --token="$VERCEL_TOKEN"
