--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.82.0",
     "emoji-picker-react": "^4.12.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
